--- a/src/sass/Counter.scss
+++ b/src/sass/Counter.scss
@@ -1,8 +1,10 @@
+@import "variables";
+
 .counter {
   .counter-card {
     width: 100%;
     height: 150px;
-    border: 3px solid #d63031;
+    border: 3px solid $primary;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,7 +14,7 @@
     &-title {
       padding: 10px 0;
       font-weight: 700;
-      color: #d63031;
+      color: $primary;
     }
 
     &-number {
