--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Colors
 $background: #2d3436;
-$primary: #d63031;
-$secondary: #ff7675;
-$third: #fab1a0;
+$primary: #653988;
+$secondary: #864ca0;
+$third: #b964a6;
