update colors, favicon

--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -24,7 +24,7 @@
       height: 35px;
       width: 35px;
       border-radius: 50%;
-      background-color: #d63031;
+      background-color: #A2142F;
       display: inline-block;
       display: flex;
       justify-content: center;
@@ -34,7 +34,7 @@
   }
 
   &-bottom {
-    background-color: #d63031;
+    background-color: #A2142F;
     height: 25%;
 
     .copy-right {
