--- a/src/sass/Page-404.scss
+++ b/src/sass/Page-404.scss
@@ -23,7 +23,7 @@
     background-color: none;
     color: #fff;
     background-color: transparent;
-    border: 3px solid #d63031;
+    border: 3px solid #A2142F;
     border-radius: 25px;
     transition: 0.15s;
     outline: none;
