--- a/src/sass/LandingPage.scss
+++ b/src/sass/LandingPage.scss
@@ -130,7 +130,7 @@
         width: 100%;
 
         .welcome {
-          color: #636e72;
+          color: #B964A6;
           font-size: 20px;
           font-weight: 700;
           padding-bottom: 2.5rem;
