--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -1,46 +1,46 @@
 .footer {
-  height: 20vh;
-  display: flex;
-  flex-direction: column;
-
-  &-top {
-    background-color: #1f2426;
-    padding: 20px 0;
-    // height: 75%;
-    width: 100%;
-    margin: auto;
+    height: 20vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
-    .circles-container {
-      display: flex;
-      justify-content: center;
-      width: 50%;
+    &-top {
+        background-color: #1f2426;
+        padding: 20px 0;
+        // height: 75%;
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .circles-container {
+            display: flex;
+            justify-content: center;
+            width: 50%;
+        }
+
+        .circle {
+            height: 35px;
+            width: 35px;
+            border-radius: 50%;
+            background-color: #b964a6;
+            display: inline-block;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 1rem;
+        }
     }
 
-    .circle {
-      height: 35px;
-      width: 35px;
-      border-radius: 50%;
-      background-color: #A2142F;
-      display: inline-block;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 1rem;
-    }
-  }
+    &-bottom {
+        background-color: #a2142f;
+        height: 25%;
 
-  &-bottom {
-    background-color: #A2142F;
-    height: 25%;
-
-    .copy-right {
-      font-size: 1.2rem;
-      text-align: center;
-      padding: 8px 0;
+        .copy-right {
+            font-size: 1.2rem;
+            text-align: center;
+            padding: 8px 0;
+        }
     }
-  }
 }
