--- a/src/sass/Page-404.scss
+++ b/src/sass/Page-404.scss
@@ -1,44 +1,44 @@
 .page-404 {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 100px;
-  h1 {
-    font-weight: 300;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10rem;
-  }
-  h2 {
-    font-size: 3rem;
-  }
-  p {
-    text-align: center;
-    width: 35%;
-    padding-bottom: 4rem;
-  }
-  & .btn-404 {
-    padding: 10px 50px;
-    background-color: none;
-    color: #fff;
-    background-color: transparent;
-    border: 3px solid #A2142F;
-    border-radius: 25px;
-    transition: 0.15s;
-    outline: none;
-
-    &:hover {
-      background-color: #d13e3e;
-      transform: scale(1.05);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;
+    h1 {
+        font-weight: 300;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 10rem;
     }
-  }
+    h2 {
+        font-size: 3rem;
+    }
+    p {
+        text-align: center;
+        width: 35%;
+        padding-bottom: 4rem;
+    }
+    & .btn-404 {
+        padding: 10px 50px;
+        background-color: none;
+        color: #fff;
+        background-color: transparent;
+        border: 3px solid #b964a6;
+        border-radius: 25px;
+        transition: 0.15s;
+        outline: none;
+
+        &:hover {
+            background-color: #d13e3e;
+            transform: scale(1.05);
+        }
+    }
 }
 
 @media only screen and (max-width: 62.5em) {
-  .page-404 {
-    p {
-      width: 80%;
+    .page-404 {
+        p {
+            width: 80%;
+        }
     }
-  }
 }
